--- a/project.config.json
+++ b/project.config.json
@@ -8,7 +8,7 @@
 		"newFeature": true
 	},
 	"compileType": "miniprogram",
-	"appid": "wxb758f7aa94254588",
+	"appid": "wx1828f97916e6bf07",
 	"projectname": "tango",
 	"miniprogramRoot": "./dist",
 	"libVersion": "2.2.2",
