--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "crypto-js": "^3.1.9-1",
     "node-sass": "^4.9.2",
     "wepy": "^1.7.0",
     "wepy-async-function": "^1.4.4",
